@@ -1,3 +1,11 @@
+2023-05-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-make-tramp-file-name): Keep hop while in file
+	name completion.
+
+	* tramp-sh.el (tramp-barf-if-no-shell-prompt): Still add optional
+	trailing `ansi-color-control-seq-regexp'.
+
 2023-05-25  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-dissect-file-name): Revert last change.
